Added supplementary alignment flag to CRAMv3.
Fixes #61

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -1009,6 +1009,8 @@ template being reversed\tabularnewline
 \hline
 0x400 &  & PCR or optical duplicate\tabularnewline
 \hline
+0x800 &  & Supplementary alignment\tabularnewline
+\hline
 \end{tabular}
 
 * For segments within the same slice.
