--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -197,7 +197,7 @@ meanings can be avoided.}
   field is used in the
   alignment records in {\sf RNAME} and {\sf RNEXT} fields. Regular expression: {\tt [!-)+-\char60\char62-\char126][!-\char126]*}\\\cline{2-3}
   & {\tt LN}* & Reference sequence length. \emph{Range}: {\tt [1,2$^{31}$-1]}\\\cline{2-3}
-  & {\tt AH} & Indicates that sequence is an alternate locus (see also \href{http://bit.ly/GRCterm}{http://bit.ly/GRCterm}). 
+  & {\tt AH} & Indicates that this sequence is an alternate locus (see also \href{ https://www.ncbi.nlm.nih.gov/grc/help/definitions}{ https://www.ncbi.nlm.nih.gov/grc/help/definitions}). 
   The value is the locus in the primary assembly for which this sequence is an alternative.
   The format is `\emph{chr}:\emph{start}-\emph{end}', `\emph{chr}' (if known) or `{\tt *}' (if unknown), where `\emph{chr}' is another sequence in the primary assembly. 
   Must not be present on sequences in the primary assembly.\\\cline{2-3}
