--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1871,6 +1871,13 @@ section~4 as BAM files and other block-compressed files with BGZF.
 
 \section{List of changes}
 
+\subsection{Changes to VCFv4.3}
+
+\begin{itemize}
+\item More strict language: "should" replaced with "must" where appropriate
+\item Tables with Type and Number definitions for INFO and FORMAT reserved keys
+\end{itemize}
+
 \subsection{Changes between VCFv4.2 and VCFv4.3}
 
 \begin{itemize}
