--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -585,6 +585,7 @@ The $3'$ fragment & 947 (0x3B3) & 85052 & \tt 303M & \tt FI:i:3\quad TC:i:3
   genome, any GFF3 feature line wrapping the origin must be split into
   two segments in SAM.
   \end{enumerate}
+  \item When saving to a file use {\tt .sam} as the file extension for non-compressed SAM format 
 \end{enumerate}
 
 \section{Guide for Describing Assembly Sequences in SAM}
