specify BX as a linked-read style identifier

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -59,6 +59,7 @@ or
   {\tt BC} & Z & Barcode sequence identifying the sample \\
   {\tt BQ} & Z & Offset to base alignment quality (BAQ) \\
   {\tt BZ} & Z & Phred quality of the unique molecular barcode bases in the {\tt OX} tag \\
+  {\tt BX} & Z & Linked-read identifier for a group of short reads drawn from a haplotype-limiting dilution pool of long molecules\footnote{Examples of this datatype are Moleculo, 10x Genomics Linked-Reads, and CPT-seq} \\
   {\tt CC} & Z & Reference name of the next hit \\
   {\tt CM} & i & Edit distance between the color sequence and the color reference (see also {\tt NM}) \\
   {\tt CO} & Z & Free-text comments \\
