added some detail to the gzipped fasta

--- a/FileExtensions.tex
+++ b/FileExtensions.tex
@@ -87,10 +87,10 @@ FASTA file & plain & {\tt .fa} & https://blast.ncbi.nlm.nih.gov/Blast.cgi \\
 FASTA index & fai & {\tt .fai} & CODE ONLY  \\
 \hline
 gzipped FASTA file & bgzip & {\tt .fasta.gz}  & CODE ONLY\\
-gzipped FASTA index & ??? & {\tt .fasta.gz.gzi} &???  \\
+gzipped FASTA index & fai+gzi & {\tt .fasta.gz.gzi} &currently in PR \#997 in htsjdk \\
 \hline
 gzipped FASTA file & bgzip & {\tt .fa.gz} & CODE ONLY \\
-gzipped FASTA index & ??? & {\tt .fa.gz.gzi}  & ???\\
+gzipped FASTA index & fai + gzi & {\tt .fa.gz.gzi}  & currently in PR in htsjdk \\
 \hline
 FASTQ & ??? & {\tt .fastq} & "crappy paper" \\
 \hline
